@@ -2,6 +2,7 @@
 *.pyc
 *.egg-info
 *.so
+*.o
 README.html
 build/
 dist/
