@@ -1,8 +1,10 @@
-2012-XX-XX   0.5.3:
+2012-XX-XX   0.6.0:
 -------------------
   * allow slice assignment to 0 or 1, e.g. a[::3] = 0  (in addition to
     booleans)
   * moved implementation of itersearch method to C level (Lluis Pamies)
+  * search, itersearch now only except bitarray objects,
+    whereas __contains__ excepts either booleans or bitarrays
   * use a priority queue for Huffman tree example (thanks to Ushma Bhatt)
   * improve documentation
 
